--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
-- Add settigns menu to change linked number.
-- customizeable fields and messages
++ Added settings menu to change linked number.
+- Add customizeable fields and messages
+- Add "a woo woo" message
