--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,8 @@
 <resources>
     
     <!-- Linky App strings -->
-    <string name="versionName">1.0.10</string>
+    <string name="versionCode">12</string>
+    <string name="versionName">1.1.00</string>
     <string name="appName">Linky</string>
     
     <!-- InputLinkedNumberActivity strings -->
